# astu

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  doxy.cfg  doxy0.cfg  output.txt
XOS/Linux/: XosSleep.cpp  XosSleep.h
XOS/Windows/: XosSleep.h
examples/: MyEntityComponent.h  MyIteratingEntitySystem.cpp  MyIteratingEntitySystem.h  MyOnyFamilySystem.cpp  MyOnyFamilySystem.h  MyService.cpp  MyService.h  MyUpdatableService.cpp  MyUpdatableService.h
include/: Application.h  AstAudio.h  AstEcs.h  AstGraphics.h  AstIO.h  AstInput.h  AstMath.h  AstSdl.h  AstService.h  AstUtils.h  AstUtils0.h  AstUtils1.h  Astu.h  AstuAi.h  AstuApi.h  AstuAudio.h  AstuECS.h  AstuGraphics.h  AstuInput.h  AstuLogging.h  AstuMath.h  AstuMisc.h  AstuNetwork.h  AstuServices.h  AstuSuite2D.h  AstuSuiteJack.h  AstuSuiteSDL.h  AstuVelox.h  Camera2Manager.h  Camera2Service.h  CameraControlService2D.h  CameraService2D.h  Color.h  ColorHsv.h  CommandQueue.h  Controllable.h  Controller.h  DefaultVertexBuffer2D.h  ECS.h  EntityFactoryService.h  (+65 more)
include/Ai/: QTable.h  Quantizer.h  StateUtil.h
include/ECS/: AutoDestructSystem.h  CAutoDestruct.h  EntityFactoryService.h  EntityService.h  EntitySystems.h
include/FSM/: DStateMachine.h  DStateMachineBuilder.h  FStateMachine.h  NStateMachine.h  PowersetBuilder.h
include/Graphics/: AntiAliasingPatternRenderer.h  BlurPattern.h  BoundingBox.h  CirclePattern.h  Color.h  ColorHsv.h  CompoundPattern.h  DifferencePattern.h  Font.h  IPatternRenderer.h  Image.h  ImageRenderer.h  IntersectionPattern.h  LinePattern.h  ObjExporter.h  Palette.h  Pattern.h  PatternRenderer.h  PolygonPattern.h  PolygonPattern2.h  Quadtree.h  QuadtreePattern.h  RalColors.h  RectanglePattern.h  RenderQuality.h  SimplePatternRenderer.h  Texture.h  TrianglePattern.h  UnicolorPattern.h  UnionPattern.h  VertexBuffer2.h  WebColors.h
include/Input/: InputMappingService.h  InputSignals.h  Keyboard.h  Keys.h  Mouse.h
include/Logging/: ConsoleLoggingService.h  LogLevel.h
include/Math/: Interpolator.h  Line2.h  MathUtils.h  Matrix3.h  Matrix4.h  Polygon.h  Quaternion.h  Random.h  Ray2.h  Ray3.h  Segment1.h  Segment2.h  SphericalCoordinates.h  Transform2.h  Tuple2.h  Vector2.h  Vector3.h
include/Network/: BasicNetworkService.h  IInetSocketAddress.h  ISocket.h  IUdpSocket.h  Inet4Address.h  IpMode.h  Network.cpp  Network.h  Peer.cpp  Peer.h  Socket.h
include/OSAL/: IThreadSleep.h  SpinLockSleep.h
include/Script/: Scanner.h  ScannerBuilder.h  ScannerError.h  ScannerException.h
include/Service/: ActionSignalService.h  BlackboardServiceTs.h  ConsoleApplication.cpp  ConsoleApplication.h  ConsoleTimeService.h  InteractiveApplication.h  LoggingService.h  NetworkService.h  Priority.h  ProgressSignal.h  RenderService.h  Resolution.h  Service.h  ServiceManager.h  SignalService.h  SignalServiceTs.h  StateService.h  SubstateService.h  TaskService.h  Tasks.h  ThreadService.h  ThreadStatus.h  TimeService.h  UpdateService.h  WindowService.h
include/Suite2D/: AutoRotateSystem.h  CAutoRotate.h  CBody.h  CColliders.h  CPose.h  CScene.h  CameraControlService.h  CameraService.h  CollisionSignal.h  CommandService2D.h  LineRenderer.h  PhysicsSystem.h  PolygonVertexBuffer.h  Scene.h  SceneSystem.h  ShapeGenerator.h  VertexBuffer2.h
include/SuiteJack/: JackClient.h
include/SuiteSDL/: Application.h  ISdlApplication1Listener.h  ISdlResizeListener.h  SdlApplication.h  SdlApplication0.h  SdlApplication1.h  SdlAudioService.h  SdlEventService.h  SdlJoystickService.h  SdlLineRenderer.h  SdlRenderService.h  SdlSceneGraph2D.h  SdlService.h  SdlTimeService.h  SdlVideoService.h
include/Util/: Buffer.cpp  Buffer.h  CommandQueue.h  Controllable.h  Controller.h  IThreadSleep.h  ListenerManager.h  Memento.h  MessageBox.h  Pooled.h  StateMachine.h  StringUtils.h  Timer.cpp  Timer.h  VersionInfo.h
include/Velox/: FileCharStream.h  ICharStream.h  StringCharStream.h  VeloxDragAndDropService.h  VeloxService.h
misc/: ArithmeticOperatorResultTable.swd  AstuSdlKeyTable.swd  AstuSource.swd  CreateGameBoilerplate.swd  CreateRalColors.swd  CreateWebColors.swd  CryptBlockComponent.cpp  EcsDiagrams1.swd  EcsDiagrams2.swd  RelationalOperator.swd  RelationalOperatorTable.swd
misc/com.quantumreboot.sword.interpreter.ObjectState@535c0ba4/: CMakeLists.txt  CMyComponent.h  Constants.h  EntityPrototypeService.cpp  EntityPrototypeService.h  GameModeService.cpp  GameModeService.h  MyIteratingEntitySystem.cpp  MyIteratingEntitySystem.h  main.cpp
src/: AstUtils.cpp  AstUtils0.cpp  AstUtils1.cpp  AstUtilsConfig.h.in  SimpleGraphics.cpp  SimpleGraphics.h
src/Ai/: QTable.cpp  Quantizer.cpp  StateUtil.cpp
src/Audio/: AstuAudio.cpp  AudioBuffer.cpp  AudioBuffer.h  JackErrorUtil.cpp  WaveCodec.cpp  WaveCodec.h
src/ECS/: AutoDestructSystem.cpp  EntityFactoryService.cpp  EntityService.cpp
src/FSM/: DStateMachine.cpp  DStateMachineBuilder.cpp  FStateMachine.cpp  NStateMachine.cpp  PowersetBuilder.cpp
src/Graphics/: AntiAliasingPatternRenderer.cpp  AntiAliasingPatternRenderer.h  AstuGraphics.cpp  BlurPattern.cpp  BmpCodec.cpp  BmpCodec.h  BoundingBox.cpp  BoundingBox.h  CirclePattern.cpp  CompoundPattern.cpp  DifferencePattern.cpp  HdrCodec.cpp  HdrCodec.h  Image.cpp  ImageRenderer.cpp  IntersectionPattern.cpp  LinePattern.cpp  ObjExporter.cpp  Palette.cpp  Pattern.cpp  Pattern.h  PatternRenderer.cpp  PatternRenderer.h  PolygonPattern.cpp  PolygonPattern2.cpp  Quadtree.cpp  Quadtree.h  QuadtreePattern.cpp  RectanglePattern.cpp  SimplePatternRenderer.cpp  TrianglePattern.cpp  Turtle.cpp  UnicolorPattern.cpp  UnionPattern.cpp
src/Input/: AstuIO.cpp  InputMappingService.cpp  Keyboard.cpp  Keys.cpp  Mouse.cpp
src/Logging/: ConsoleLoggingService.cpp  LogLevel.cpp
src/Math/: MathUtils.cpp  Random.cpp
src/Network/: BasicNetworkService.cpp  Network.cpp  Peer.cpp
src/OSAL/: SpinLockSleep.cpp
src/SDL/: SdlApplication.cpp  SdlApplicationDummy.cpp
src/Script/: Scanner.cpp  ScannerBuilder.cpp
src/Service/: ActionSignalService.cpp  BlackboardServiceTs.cpp  ConsoleApplication.cpp  ConsoleTimeService.cpp  InteractiveApplication.cpp  (+8 more)
(+526 files in other folders)
